fix: correct package name and registry in configuration files

--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name" : "generator-spring-rest-api",
-  "version" : "1.0.0",
-  "description" : "Generador de APIs REST para Spring Boot basado en arquitectura API, Controller, Service y ServiceImpl.",
-  "main" : "app/index.js",
-  "keywords" : [
+  "name": "@eduardnol/REST-Yoman-Generator",
+  "version": "1.0.0",
+  "description": "Generador de APIs REST para Spring Boot basado en arquitectura API, Controller, Service y ServiceImpl.",
+  "main": "app/index.js",
+  "publishConfig": {
+    "@eduardnol:registry": "https://npm.pkg.github.com"
+  },
+  "keywords": [
     "yeoman-generator",
     "spring-boot",
     "rest-api"
   ],
-  "dependencies" : {
-    "yeoman-generator" : "5.7.0",
-    "chalk" : "4.1.2"
+  "dependencies": {
+    "yeoman-generator": "5.7.0",
+    "chalk": "4.1.2"
   },
-  "devDependencies" : {
-    "yeoman-test" : "6.3.0"
-  },
-  "publishConfig": {
-    "@EDUARDNOL:registry": "https://npm.pkg.github.com"
+  "devDependencies": {
+    "yeoman-test": "6.3.0"
   }
 }
