fix: update version to 1.0.1-RC in package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eduardnol/rest-yoman-generator",
-  "version": "1.0.0",
+  "version": "1.0.1-RC",
   "description": "Generador de APIs REST para Spring Boot basado en arquitectura API, Controller, Service y ServiceImpl.",
   "main": "app/index.js",
   "publishConfig": {
